# kiji-proxy

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.build-linux  Dockerfile.model-server  Dockerfile.ui  LICENSE  Makefile  NOTICE  README.md  augmented_model.onnx  docker-compose.yml  embeds.go  env.example  go.mod  go.sum  main.go  mise.toml  package-lock.json  package.json  pyproject.toml  start_dev.sh  training_pipeline.py
.changeset/: README.md  brave-otters-sing.md  chilly-shirts-serve.md  clean-books-travel.md  curvy-cameras-taste.md  cyan-emus-trade.md  eager-owls-burn.md  eight-bananas-slide.md  five-parents-cry.md  flat-donkeys-double.md  four-onions-watch.md  humble-coats-do.md  humble-readers-admire.md  icy-sails-allow.md  initial-release.md  khaki-hotels-invite.md  long-tables-lose.md  nine-bikes-flow.md  ninety-sides-yawn.md  open-rooms-travel.md  rare-jars-dream.md  real-files-reply.md  rich-lizards-talk.md  seven-yaks-throw.md  shaky-tools-feel.md  sharp-crews-retire.md  silent-pillows-tap.md  solid-suits-exist.md  tall-canyons-bet.md  tasty-dolls-mate.md  tiny-boxes-stick.md  version-043-release.md  version-044-release.md  version-045-release.md  violet-cloths-matter.md  whole-planets-sneeze.md  whole-plants-return.md  wicked-rocks-camp.md  young-eggs-notice.md  young-items-ask.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/cla/: CLA.md  contributor_license_agreement.md
.github/scripts/: classify-pr-files.sh
.github/workflows/: README.md  auto-tag.yml  build-dmg.yml  changesets.yml  cla.yml  cleanup-artifacts.yml  container_overview.md  lint-and-test.yml  lint.yml  release-chrome-extension.yml  release-dmg.yml  release-linux-test.yml  release-linux.yml  release.yml  semantic-pr.yml  sign-model.yml
.zed/: README.md  settings.json  tasks.json
chrome-extension/: background.js  config.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  styles.css
config/: README.md  config.development.json  config.go
dataset/: __init__.py  api_clients.py  file_operations.py  label_utils.py  prompts.py  schemas.py  tokenization.py  training_set.py
docs/: 01-getting-started.md  02-development-guide.md  03-building-deployment.md  04-release-management.md  05-advanced-topics.md  06-chrome-extension.md  07-customizing-pii-model.md  BUILD.md  BUILD_TROUBLESHOOTING.md  BUILD_new.md  DEVELOPMENT.md  MODEL_SIGNING.md  QUICKSTART-RELEASE.md  README.md  RELEASE_MANAGEMENT.md  RELEASE_WORKFLOWS.md  RELEASE_WORKFLOWS_new.md  TRANSPARENT_PROXY.md  VERSION_DEVELOPMENT.md  release-workflow.md
electron_ui/: README-ELECTRON.md  README.md  electron-main.js  index.html  package-lock.json  package.json  privacy-proxy-ui.tsx  webpack.config.js
frontend/: SettingsModal.tsx  electron.d.ts  server.js  webpack.config.js
model/: __init__.py  config.py  eval_model.py  model.py  model_ideas.md  preprocessing.py  quantitize.py  train.py  train_colab.ipynb  trainer.py  training_colab.py
model/dataset/: DOUBLEWORD_QUICKSTART.md  NEBIUS_VLLM_SETUP.md  README.md  __init__.py  analyze_dataset.py  api_clients.py  audit_dataset.py  batch_generator.py  batch_monitor.py  doubleword_client.py  file_operations.py  label_utils.py  pipeline.py  pipeline_state.py  prompts.py  rename_dob_to_dateofbirth.py  result_processor.py  schemas.py  to_labelstudio.py  tokenization.py  training_set.py  training_set_doubleword.py  training_set_doubleword_coref.py  training_set_doubleword_result_processing.py  training_set_review.py  upload_to_hf.py  upload_to_s3.py
model/flows/: README.md  benchmark_branches.py  run_training.sh  training_config.toml  training_pipeline.py
model/quantized/: config.json  crf_transitions.json  label_mappings.json  model.onnx  model.onnx.data  model_manifest.json  model_quantized.onnx  tokenizer.json  tokenizer_config.json
model/src/: callbacks.py  checkpoint_utils.py  compare_models.py  config.py  debug_onnx_vs_pytorch.py  debug_pipeline.py  diagnose_inference.py  eval_model.py  eval_model_detailed.py  export_data.py  model.py  model_signing.py  onnx_quantization.py  optimize_onnx.py  parity_benchmark.py  post_quantize_onnx.py  preprocessing.py  quantitize.py  quantization_sweep.py  quantize_variants.py  test_onnx.py  test_onnx_inference.py  train.py  train_colab.ipynb  trainer.py
model/trained/: README.md
model_server/: README.md  curl_examples.sh  download_latest_model.py  example_client.py  fast_api.py  start_server.sh
packaging/debian/: changelog  control  copyright  kiji-privacy-proxy.service  kiji-proxy.wrapper  rules
pii/: database.go  generator_service.go  mapper.go  masking_service.go
pii/detectors/: detector.go  model_detector.go  onnx_model_detector.go  regex_detector.go  regex_detector_test.go  types.go
pii/generators/: pii_generators.go
pii_model/: README.md
pii_onnx_model/: .placeholder  config.json  label_mappings.json  model.onnx  model_quantized.onnx  test_model.py  tokenizer_config.json
processor/: response.go
proxy/: handler.go
reports/: README.md  avx2-smoke-100.json  avx512-vnni-cpu-100.json  baseline-cpu-100.json  baseline-unquantized-1000.json  baseline-unquantized-cuda-auto-1000.json  crf-viterbi-quantization-findings.md  ort-dynamic-smoke-100.json  ort-graph-optimization-smoke-100.json  ort-static-calibration-smoke-100.json  quantization-evaluations.md
scripts/: build_dmg.sh  build_single_binary.sh  setup_database.sql  start.sh  start_dev.sh  stop_dev.sh
server/: server.go
src/backend/: embeds.go  embeds_linux.go  embeds_model_quantized.go  embeds_model_trained.go  embeds_stub.go  main.go
src/frontend/: .eslintrc.json  AboutModal.tsx  CHANGELOG.md  LoggingModal.tsx  MisclassificationModal.tsx  SettingsModal.tsx  electron-main.js  electron-preload.js  eslint.config.js  index.html  index.js  server.js  (+8 more)
ui/: index.html  package-lock.json  package.json  privacy-proxy-ui.tsx  server.js  webpack.config.js
web_ui/: index.js  privacy-proxy-ui.tsx  server.js  webpack.config.js
(+165 files in other folders)
