[project]
name = "yaak-proxy"
version = "0.1.0"
description = "PII Detection and Masking Proxy - Minimal Production"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yaak Team"},
]

# Minimal production dependencies - only what's absolutely necessary
dependencies = [
    # Core ML/NLP dependencies (essential for PII detection)
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0",

    # FastAPI server dependencies (essential for API)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",

    # HTTP client for testing (lightweight)
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]
lint = [
    "ruff>=0.1.0",
]

# Training dependencies (not needed in production)
training = [
    "wandb>=0.12.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.64.0",
    "psutil>=5.8.0",
    "accelerate>=0.26.0",
    "scipy>=1.0.0",
    "pandas>=1.0.0",
    "pyarrow>=1.0.0",
    "sympy>=1.0.0",
]

# ONNX quantization dependencies
quantization = [
    "optimum[onnxruntime]>=1.15.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

# Note: 'all' group removed - use 'dev' instead for development dependencies

[project.scripts]
yaak-server = "model_server.fast_api:main"

[project.urls]
Homepage = "https://github.com/yaak/pii-detection"
Repository = "https://github.com/yaak/pii-detection"
Documentation = "https://github.com/yaak/pii-detection/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "model_server"]
exclude = [
    "model/__pycache__",
    "model_server/__pycache__",
    "*.pyc",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["model", "model_server"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
